--- a/index.html
+++ b/index.html
@@ -5,14 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quote Generator!</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" type="image/png" href="http://www.google.com/s2/favicons?domain=jacinto.design">
+    <link rel="icon" href="favicon.ico" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
     />
   </head>
   <body>
-   
+    <div class="quote-container" id="quote-container">
+      <div class="quote-text">
+        <i class="fas fa-quote-left"></i>
+        <span id="quote">
+          Stay Hungry Stay Foolish!
+        </span>
+      </div>
+      <div class="quote-author">
+          <span class="author">
+              Steve Jobs
+          </span>
+      </div>
+      <div class="button-container">
+          <button class="twitter-button" id="twitter" title="Tweet This!">
+              <i class="fab fa-twitter"></i>
+          </button>
+          <button id="new-quote">
+              New Quote!
+          </button>
+      </div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
