--- a/index.html
+++ b/index.html
@@ -6,33 +6,32 @@
     <title>Quote Generator!</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" href="favicon.ico" />
-    <link
+    <link 
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
     />
   </head>
   <body>
     <div class="quote-container" id="quote-container">
+      <!-- Quote -->
       <div class="quote-text">
         <i class="fas fa-quote-left"></i>
-        <span id="quote">
-          Stay Hungry Stay Foolish!
-        </span>
+        <span id="quote"></span>
       </div>
+      <!-- Author -->
       <div class="quote-author">
-          <span class="author">
-              Steve Jobs
-          </span>
+        <span id="author"></span>
       </div>
+      <!-- Buttons -->
       <div class="button-container">
-          <button class="twitter-button" id="twitter" title="Tweet This!">
-              <i class="fab fa-twitter"></i>
-          </button>
-          <button id="new-quote">
-              New Quote!
-          </button>
+        <button class="twitter-button" id="twitter" title="Tweet This!">
+          <i class="fab fa-twitter"></i>
+        </button>
+        <button id="new-quote">New Quote</button>
       </div>
     </div>
     <script src="script.js"></script>
   </body>
 </html>
+
+
