--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Quote Generator!</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" href="favicon.ico" />
-    <link 
+    <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
     />
@@ -27,15 +27,12 @@
         <button class="twitter-button" id="twitter" title="Tweet This!">
           <i class="fab fa-twitter"></i>
         </button>
-        <button id="new-quote">New Quote!</button>
+        <button id="new-quote">New Quote</button>
       </div>
     </div>
-
     <!-- Loader -->
     <div class="loader" id="loader"></div>
-    <!-- Script for JavaScript -->
+    <!-- Script -->
     <script src="script.js"></script>
   </body>
 </html>
-
-
